tests/baselines/reference/emitAccessExpressionOfCastedObjectLiteralExpressionInArrowFunctionES6(strict=true).errors.txt
emitAccessExpressionOfCastedObjectLiteralExpressionInArrowFunctionES6.ts(1,2): error TS7006: Parameter 'x' implicitly has an 'any' type.
emitAccessExpressionOfCastedObjectLiteralExpressionInArrowFunctionES6.ts(2,2): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== emitAccessExpressionOfCastedObjectLiteralExpressionInArrowFunctionES6.ts (2 errors) ====
    (x) => ({ "1": "one", "2": "two" } as { [key: string]: string })[x];
     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    (x) => ({ "1": "one", "2": "two" } as { [key: string]: string }).x;
     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.